# Oasis

./: .gitattributes  .gitignore  AGENTS.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  release-note.md  uno.config.ts  vite.config.ts
.github/workflows/: release-android.yml  release-desktop.yml  release.yml
docs/: quick-add-parsing.md  user-guide.md
docs/images/user-guide/: stats-demo.webm
src/: App.css  App.tsx  bindings.ts  index.tsx  rsstore.tsx  utils.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: input_parser.rs  lib.rs  main.rs  quick_add.rs  store.rs
src/components/: DesktopApp.tsx  DesktopTodoItem.tsx  DueDateChip.tsx  InlineDatePicker.tsx  MobileApp.tsx  MobileTodoItem.tsx  SearchPanel.tsx  StatsPanel.tsx  TaggableTextInput.tsx  TodoInput.css  TodoInput.tsx  TodoItem.css  TodoItem.tsx  TodoMetaControls.tsx
src/hooks/: useDeviceDetect.ts  useNotificationPermission.ts  useTodos.ts
src/styles/: main.css
src/utils/: date.ts  tags.ts
