[package]
name = "oasis"
version = "0.5.1"
description = "一款轻量、简洁的跨平台待办事项桌面应用。"
authors = ["Uno"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oasis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
tauri-plugin-notification = "2"
